modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,77 +1,10 @@
 ---
 ---
 
-@article{Razavi2025-pl,
-  abbr={npj Imaging},
-  bibtex_show={true},
-  doi={10.1038/s44303-024-00061-z},
-  title     = {A multiresolution approach with method-informed statistical
-               analysis for quantifying lymphatic pumping dynamics},
-  author    = {Razavi, Mohammad S and Ruscic, Katarina J and Korn, Elizabeth G
-               and Marquez, Marla and Houle, Timothy T and Singhal, Dhruv and
-               Munn, Lance L and Padera, Timothy P},
-  journal   = {npj Imaging},
-  publisher={Nature Publishing Group UK London},
-  volume    =  {3},
-  number    =  {1},
-  month     =  {jan},
-  year      =  {2025},
-  selected={true},
-  language  = "en"
-}
-
-
-@article{lei2024aging,
-  abbr={Dev Cell},
-  title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
-  author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
-  journal={Developmental Cell},
-  year={2024},
-  publisher={Elsevier}
-}
-
-
-
-@article{razavi2020characterization,
-  abbr={J. R. Soc. Interface},
-  bibtex_show={true},
-  doi={10.1098/rsif.2020.0598},
-  title={Characterization of rat tail lymphatic contractility and biomechanics: incorporating nitric oxide-mediated vasoregulation},
-  author={Razavi, Mohammad S and Dixon, J Brandon and Gleason, Rudolph L},
-  journal={Journal of the Royal Society Interface},
-  volume={17},
-  number={170},
-  pages={20200598},
-  year={2020},
-  publisher={The Royal Society}
-}
-
-@article{razavi2024mechanics,
-  title={Mechanics of Lymphatic Pumping and Lymphatic Function},
-  author={Razavi, Mohammad S and Munn, Lance L and Padera, Timothy P},
-  journal={Cold Spring Harbor Perspectives in Medicine},
-  pages={a041171},
-  year={2024},
-  publisher={Cold Spring Harbor Laboratory Press}
-}
-
-
-@article{keahey2021spectral,
-  abbr={Nano Letters},
-  bibtex_show={true},
-  title={Spectral-and polarization-dependent scattering of gold nanobipyramids for exogenous contrast in optical coherence tomography},
-  author={Keahey, Pelham and Si, Peng and Razavi, Mohammad and Yu, Shangjie and Lippok, Norman and Villiger, Martin and Padera, Timothy P and de la Zerda, Adam and Bouma, Brett},
-  journal={Nano Letters},
-  volume={21},
-  number={20},
-  pages={8595--8601},
-  year={2021},
-  publisher={ACS Publications}
-}
 
 
 @article{10.3389/fphys.2018.00581, 
-abbr={Front. physiol.},
+abbr={F Phys},
 bibtex_show={true},
 year = {2018}, 
 title = {{Scaling Laws of Flow Rate, Vessel Blood Volume, Lengths, and Transit Times With Number of Capillaries}}, 
@@ -83,5 +16,92 @@ pmid = {29875687},
 pmcid = {PMC5974547}, 
 abstract = {{The structure-function relation is one of the oldest hypotheses in biology and medicine; i.e., form serves function and function influences form. Here, we derive and validate form-function relations for volume, length, flow, and mean transit time in vascular trees and capillary numbers of various organs and species. We define a vessel segment as a “stem” and the vascular tree supplied by the stem as a “crown.” We demonstrate form-function relations between the number of capillaries in a vascular network and the crown volume, crown length, and blood flow that perfuses the network. The scaling laws predict an exponential relationship between crown volume and the number of capillaries with the power, λ, of 4/3 < λ < 3/2. It is also shown that blood flow rate and vessel lengths are proportional to the number of capillaries in the entire stem-crown systems. The integration of the scaling laws then results in a relation between transit time and crown length and volume. The scaling laws are both intra-specific (i.e., within vasculatures of various organs, including heart, lung, mesentery, skeletal muscle and eye) and inter-specific (i.e., across various species, including rats, cats, rabbits, pigs, hamsters, and humans). This study is fundamental to understanding the physiological structure and function of vascular trees to transport blood, with significant implications for organ health and disease.}}, 
 pages = {581}, 
-volume = {9}
+volume = {9}, 
+}
+@article{10.1101/cshperspect.a041171, 
+abbr={CSH Perspect},
+bibtex_show={true},
+year = {2024}, 
+title = {{Mechanics of Lymphatic Pumping and Lymphatic Function}}, 
+author = {Razavi, Mohammad S and Munn, Lance L and Padera, Timothy P}, 
+journal = {Cold Spring Harbor Perspectives in Medicine}, 
+doi = {10.1101/cshperspect.a041171}, 
+pmid = {38692743}, 
+abstract = {{The lymphatic system plays a crucial role in maintaining tissue fluid balance, immune surveillance, and the transport of lipids and macromolecules. Lymph is absorbed by initial lymphatics and then driven through lymph nodes and to the blood circulation by the contraction of collecting lymphatic vessels. Intraluminal valves in collecting lymphatic vessels ensure the unidirectional flow of lymph centrally. The lymphatic muscle cells that invest in collecting lymphatic vessels impart energy to propel lymph against hydrostatic pressure gradients and gravity. A variety of mechanical and biochemical stimuli modulate the contractile activity of lymphatic vessels. This review focuses on the recent advances in our understanding of the mechanisms involved in regulating and collecting lymphatic vessel pumping in normal tissues and the association between lymphatic pumping, infection, inflammatory disease states, and lymphedema.}}, 
+pages = {a041171}
+}
+@article{10.1098/rsif.2020.0598, 
+abbr={J. R. Soc. Interface},
+bibtex_show={true},
+year = {2020}, 
+title = {{Characterization of rat tail lymphatic contractility and biomechanics: incorporating nitric oxide-mediated vasoregulation}}, 
+author = {Razavi, Mohammad S. and Dixon, J. Brandon and Gleason, Rudolph L.}, 
+journal = {Journal of the Royal Society Interface}, 
+issn = {1742-5689}, 
+doi = {10.1098/rsif.2020.0598}, 
+pmid = {32993429}, 
+pmcid = {PMC7536047}, 
+abstract = {{The lymphatic system transports lymph from the interstitial space back to the great veins via a series of orchestrated contractions of chains of lymphangions. Biomechanical models of lymph transport, validated with ex vivo or in vivo experimental results, have proved useful in revealing novel insight into lymphatic pumping; however, a need remains to characterize the contributions of vasoregulatory compounds in these modelling tools. Nitric oxide (NO) is a key mediator of lymphatic pumping. We quantified the active contractile and passive biaxial biomechanical response of rat tail collecting lymphatics and changes in the contractile response to the exogenous NO administration and integrated these findings into a biomechanical model. The passive mechanical response was characterized with a three-fibre family model. Nonlinear regression and non-parametric bootstrapping were used to identify best-fit material parameters to passive cylindrical biaxial mechanical data, assessing uniqueness and parameter confidence intervals; this model yielded a good fit (R2 = 0.90). Exogenous delivery of NO via sodium nitroprusside (SNP) elicited a dose-dependent suppression of contractions; the amplitude of contractions decreased by 30\% and the contraction frequency decreased by 70\%. Contractile function was characterized with a modified Rachev–Hayashi model, introducing a parameter that is related to SNP concentration; the model provided a good fit (R2 = 0.89) to changes in contractile responses to varying concentrations of SNP. These results demonstrated the significant role of NO in lymphatic pumping and provide a predictive biomechanical model to integrate the combined effect of mechanical loading and NO on lymphatic contractility and mechanical response.}}, 
+pages = {20200598}, 
+number = {170}, 
+volume = {17}
+}
+@article{10.1038/s41598-020-62799-x, 
+
+abbr={Sci. Rep.},
+bibtex_show={true},
+year = {2020}, 
+title = {{Axial stretch regulates rat tail collecting lymphatic vessel contractions}}, 
+author = {Razavi, Mohammad S. and Leonard-Duke, Julie and Hardie, Becky and Dixon, J. Brandon and Gleason, Rudolph L.}, 
+journal = {Scientific Reports}, 
+doi = {10.1038/s41598-020-62799-x}, 
+pmid = {32246026}, 
+pmcid = {PMC7125298}, 
+abstract = {{Lymphatic contractions play a fundamental role in maintaining tissue and organ homeostasis. The lymphatic system relies on orchestrated contraction of collecting lymphatic vessels, via lymphatic muscle cells and one-way valves, to transport lymph from the interstitial space back to the great veins, against an adverse pressure gradient. Circumferential stretch is known to regulate contractile function in collecting lymphatic vessels; however, less is known about the role of axial stretch in regulating contraction. It is likely that collecting lymphatic vessels are under axial strain in vivo and that the opening and closing of lymphatic valves leads to significant changes in axial strain throughout the pumping cycle. The purpose of this paper is to quantify the responsiveness of lympatic pumping to altered axial stretch. In situ measurements suggest that rat tail collecting lymphatic vessels are under an axial stretch of \textbackslashtextasciitilde1.24 under normal physiological loads. Ex vivo experiments on isolated rat tail collecting lymphatics showed that the contractile metrics such as contractile amplitude, frequency, ejection fraction, and fractional pump flow are sensitive to axial stretch. Multiphoton microscopy showed that the predominant orientation of collagen fibers is in the axial direction, while lymphatic muscle cell nuclei and actin fibers are oriented in both circumferential and longitudinal directions, suggesting an axial component to contraction. Taken together, these results demonstrate the significance of axial stretch in lymphatic contractile function, suggest that axial stretch may play an important role in regulating lymph transport, and demonstrate that changes in axial strains could be an important factor in disease progression.}}, 
+pages = {5918}, 
+number = {1}, 
+volume = {10}
+}
+@article{10.1038/s44303-024-00061-z, 
+abbr={npj Imaging},
+bibtex_show={true},
+year = {2025}, 
+title = {{A multiresolution approach with method-informed statistical analysis for quantifying lymphatic pumping dynamics}}, 
+author = {Razavi, Mohammad S. and Ruscic, Katarina J. and Korn, Elizabeth G. and Marquez, Marla and Houle, Timothy T. and Singhal, Dhruv and Munn, Lance L. and Padera, Timothy P.}, 
+journal = {npj Imaging}, 
+doi = {10.1038/s44303-024-00061-z}, 
+abstract = {{Despite significant strides in lymphatic system imaging, the timely diagnosis of lymphatic disorders remains elusive. This is driven by the absence of standardized, non-invasive, reliable, quantitative methods for real-time functional analysis of lymphatic contractility with adequate spatial and temporal resolution. Here, we address this unmet need by integrating near-infrared fluorescence lymphangiography imaging with an innovative analytical workflow that combines data acquisition, signal processing, and statistical analysis to integrate traditional peak-and-valley analysis with advanced wavelet time-frequency analyses. Variance component analysis was used to evaluate the drivers of variance attributable to each experimental variable for each lymphangiography measurement type. Generalizability studies were used to assess the reliability of measured parameters and how reliability improves as the number of repeat measurements per subject increases. This allowed us to determine the minimum number of repeat measurements needed per subject for acceptable measurement reliability. This approach not only offers detailed insights into lymphatic pumping behaviors across species, sex and age, but also significantly boosts the reliability of these measurements by incorporating multiple regions of interest and evaluating the lymphatic system under various gravitational loads. For example, the reliability of the peak-and-valley analysis of human lymphatic vessels was increased 3-fold using the described approach. By addressing the critical need for improved imaging and quantification methods, our study offers a new standard approach for the imaging and analysis of lymphatic function that can improve our understanding, diagnosis, and treatment of lymphatic diseases. The results highlight the importance of comprehensive data acquisition strategies to fully capture the dynamic behavior of the lymphatic system.}}, 
+pages = {2}, 
+number = {1}, 
+volume = {3}, 
+}
+@article{10.1038/s41551-019-0493-1, 
+abbr={Nature BME},
+bibtex_show={true},
+year = {2020}, 
+rating = {5}, 
+keywords = {Lymphatic regeneration}, 
+title = {{Lymphatic remodelling in response to lymphatic injury in the hind limbs of sheep}}, 
+author = {Nelson, Tyler S. and Nepiyushchikh, Zhanna and Hooks, Joshua S. T. and Razavi, Mohammad S. and Lewis, Tristan and Clement, Cristina C. and Thoresen, Merrilee and Cribb, Matthew T. and Ross, Mindy K. and Gleason, Rudolph L. and Santambrogio, Laura and Peroni, John F. and Dixon, J. Brandon}, 
+journal = {Nature Biomedical Engineering}, 
+doi = {10.1038/s41551-019-0493-1}, 
+pmid = {31873209}, 
+pmcid = {PMC7549051}, 
+abstract = {{Contractile activity in the lymphatic vasculature is essential for maintaining fluid balance within organs and tissues. However, the mechanisms by which collecting lymphatics adapt to changes in fluid load and how these adaptations influence lymphatic contractile activity are unknown. Here we report a model of lymphatic injury based on the ligation of one of two parallel lymphatic vessels in the hind limb of sheep and the evaluation of structural and functional changes in the intact, remodelling lymphatic vessel over a 42-day period. We show that the remodelled lymphatic vessel displayed increasing intrinsic contractile frequency, force generation and vessel compliance, as well as decreasing flow-mediated contractile inhibition via the enzyme endothelial nitric oxide synthase. A computational model of a chain of lymphatic contractile segments incorporating these adaptations predicted increases in the flow-generation capacity of the remodelled vessel at the expense of normal mitochondrial function and elevated oxidative stress within the lymphatic muscle. Our findings may inform interventions for mitigating lymphatic muscle fatigue in patients with dysfunctional lymphatics. Structural and functional analyses of the remodelling of intact lymphatic vasculature after the ligation of a hind-limb lymphatic vessel in sheep reveal the adaptations to the changes in fluid load that occur after lymphatic injury.}}, 
+pages = {649--661}, 
+number = {6}, 
+volume = {4}
+}
+@article{10.1101/2023.09.19.558262, 
+abbr={BioArxiv},
+bibtex_show={true},
+year = {2024}, 
+title = {{Cancer immunotherapy response persists after lymph node resection}}, 
+author = {Zhou, Hengbo and Menzel, Lutz and Baish, James W. and O’Melia, Meghan J. and Darragh, Laurel B. and Effiom, Derek N. and Specht, Emma and Czapla, Juliane and Lei, Pin-ji and Rajotte, Johanna J. and Liu, Lingshan and Nikmaneshi, Mohammad R. and Razavi, Mohammad S. and Heiden, Matthew G. Vander and Ubellacker, Jessalyn M. and Munn, Lance L. and Karam, Sana D. and Boland, Genevieve M. and Cohen, Sonia and Padera, Timothy P.}, 
+journal = {bioRxiv}, 
+doi = {10.1101/2023.09.19.558262}, 
+pmid = {37781599}, 
+pmcid = {PMC10541098}, 
+abstract = {{Lymphatic transport facilitates the presentation of cancer antigens in tumor-draining lymph nodes (tdLNs), leading to T cell activation and the generation of systemic antitumor immune surveillance. Surgical removal of LNs to control cancer progression is routine in clinical practice. However, whether removing tdLNs impairs immune checkpoint blockade (ICB) is still controversial. Our analysis demonstrates that melanoma patients remain responsive to PD-1 checkpoint blockade after LN dissection. We were able to recapitulate the persistent response to ICB after complete LN resection in murine melanoma and mammary carcinoma models. Mechanistically, soluble antigen and antigen- carrying migratory dendritic cells are diverted to non-directly tumor draining LNs (non-tdLNs) after tdLN dissection. Consistently, robust ICB responses in patients with head and neck cancer after primary tumor and tdLN resection correlated with the presence of reactive LNs in distant areas. These findings indicate that non-tdLNs sufficiently compensate for the removal of direct tdLNs and sustain the response to ICB.}}, 
+pages = {2023.09.19.558262}
 }
