--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 
 
 @article{10.3389/fphys.2018.00581, 
-abbr={F Phys},
+abbr={Front Physiol},
 bibtex_show={true},
 year = {2018}, 
 title = {{Scaling Laws of Flow Rate, Vessel Blood Volume, Lengths, and Transit Times With Number of Capillaries}}, 
