modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -74,6 +74,7 @@ abstract = {{Despite significant strides in lymphatic system imaging, the timely
 pages = {2}, 
 number = {1}, 
 volume = {3}, 
+selected={true},
 }
 @article{10.1038/s41551-019-0493-1, 
 abbr={Nature BME},
