modified:   _bibliography/papers.bib 	modified:   _pages/profiles.md

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 
 
 @article{10.3389/fphys.2018.00581, 
+selected={true},
 abbr={Front Physiol},
 bibtex_show={true},
 year = {2018}, 
@@ -74,7 +75,7 @@ abstract = {{Despite significant strides in lymphatic system imaging, the timely
 pages = {2}, 
 number = {1}, 
 volume = {3}, 
-selected={true},
+selected={true}
 }
 @article{10.1038/s41551-019-0493-1, 
 abbr={Nature BME},
