modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -106,3 +106,25 @@ pmcid = {PMC10541098},
 abstract = {{Lymphatic transport facilitates the presentation of cancer antigens in tumor-draining lymph nodes (tdLNs), leading to T cell activation and the generation of systemic antitumor immune surveillance. Surgical removal of LNs to control cancer progression is routine in clinical practice. However, whether removing tdLNs impairs immune checkpoint blockade (ICB) is still controversial. Our analysis demonstrates that melanoma patients remain responsive to PD-1 checkpoint blockade after LN dissection. We were able to recapitulate the persistent response to ICB after complete LN resection in murine melanoma and mammary carcinoma models. Mechanistically, soluble antigen and antigen- carrying migratory dendritic cells are diverted to non-directly tumor draining LNs (non-tdLNs) after tdLN dissection. Consistently, robust ICB responses in patients with head and neck cancer after primary tumor and tdLN resection correlated with the presence of reactive LNs in distant areas. These findings indicate that non-tdLNs sufficiently compensate for the removal of direct tdLNs and sustain the response to ICB.}}, 
 pages = {2023.09.19.558262}
 }
+
+@article{lei2025aging,
+  title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
+  author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
+  journal={Developmental Cell},
+  volume={60},
+  number={7},
+  pages={1118--1133},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{razavi2013development,
+  title={Development of a general method for designing microvascular networks using distribution of wall shear stress},
+  author={Razavi, Mohammad Sayed and Shirani, Ebrahim},
+  journal={Journal of biomechanics},
+  volume={46},
+  number={13},
+  pages={2303--2309},
+  year={2013},
+  publisher={Elsevier}
+}
