modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -108,6 +108,7 @@ pages = {2023.09.19.558262}
 }
 
 @article{lei2025aging,
+abbr={Dev. Cell},
   title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
   author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
   journal={Developmental Cell},
@@ -119,6 +120,7 @@ pages = {2023.09.19.558262}
 }
 
 @article{razavi2013development,
+abbr={J. Biomech},
   title={Development of a general method for designing microvascular networks using distribution of wall shear stress},
   author={Razavi, Mohammad Sayed and Shirani, Ebrahim},
   journal={Journal of biomechanics},
