modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -130,3 +130,26 @@ abbr={J. Biomech},
   year={2013},
   publisher={Elsevier}
 }
+
+@article{razavi2014constructal,
+abbr={PLoS One},
+  title={Constructal law of vascular trees for facilitation of flow},
+  author={Razavi, Mohammad S and Shirani, Ebrahim and Salimpour, Mohammad Reza and Kassab, Ghassan S},
+  journal={PLoS One},
+  volume={9},
+  number={12},
+  pages={e116260},
+  year={2014},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{razavi2014development,
+abbr={AIP Advances},
+  title={Development of a general method for obtaining the geometry of microfluidic networks},
+  author={Razavi, Mohammad Sayed and Shirani, Ebrahim and Salimpour, MR},
+  journal={Aip Advances},
+  volume={4},
+  number={1},
+  year={2014},
+  publisher={AIP Publishing}
+}
